--- a/.github/workflows/demo-pipeline.yaml
+++ b/.github/workflows/demo-pipeline.yaml
@@ -29,6 +29,8 @@ jobs:
   repo-tag:
     runs-on: ubuntu-latest
     needs: unit-test
+    outputs:
+      version: ${{ steps.export-version.outputs.version }}
 
     steps:
     - name: Repo Checkout
@@ -37,6 +39,7 @@ jobs:
         ref: 'main'
         fetch-depth: 0
     - name: Export Version
+      id: export-version
       run: |
         VERSION=$(cat version.txt)
         echo "version=$VERSION" >> $GITHUB_ENV
@@ -55,7 +58,7 @@ jobs:
     - name: Repo Checkout
       uses: actions/checkout@v4
       with:
-        ref: "v${{ env.version }}"
+        ref: "v${{ needs.repo-tag.outputs.version }}"
     - name: Docker Buildx Setup
       uses: docker/setup-buildx-action@v3
     - name: GHCR Setup
