--- a/.github/workflows/demo-pipeline.yaml
+++ b/.github/workflows/demo-pipeline.yaml
@@ -53,12 +53,14 @@ jobs:
   docker-build-and-push:
     runs-on: ubuntu-latest
     needs: repo-tag
+    env:
+      TAG: "v${{ needs.repo-tag.outputs.version }}"
 
     steps:
     - name: Repo Checkout
       uses: actions/checkout@v4
       with:
-        ref: "v${{ needs.repo-tag.outputs.version }}"
+        ref: "$TAG"
     - name: Docker Buildx Setup
       uses: docker/setup-buildx-action@v3
     - name: GHCR Setup
