--- a/.github/workflows/demo-pipeline.yaml
+++ b/.github/workflows/demo-pipeline.yaml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: unit-test
     outputs:
-      version: ${{ steps.export-version.outputs.version }}
+      version: ${{ steps.export-version.outputs.VERSION }}
 
     steps:
     - name: Repo Checkout
@@ -41,26 +41,26 @@ jobs:
     - name: Export Version
       id: export-version
       run: |
-        VERSION=$(cat version.txt)
-        echo "version=$VERSION" >> $GITHUB_ENV
+        version=$(cat version.txt)
+        echo "VERSION=$version" >> $GITHUB_OUTPUT
     - name: Tag Repo
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "actions@github.com"
-        git tag -a "v${{ env.version }}" -m "Version ${{ env.version }}"
-        git push origin "v${{ env.version }}"
+        git tag -a 'v"$VERSION"' -m 'Version "$VERSION"'
+        git push origin 'v"$VERSION"'
             
   docker-build-and-push:
     runs-on: ubuntu-latest
     needs: repo-tag
     env:
-      TAG: "v${{ needs.repo-tag.outputs.version }}"
+      TAG: ${{ needs.repo-tag.outputs.VERSION }}
 
     steps:
     - name: Repo Checkout
       uses: actions/checkout@v4
       with:
-        ref: "$TAG"
+        ref: 'v"$TAG"'
     - name: Docker Buildx Setup
       uses: docker/setup-buildx-action@v3
     - name: GHCR Setup
@@ -71,10 +71,10 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Docker Build
       run: |
-        docker build -t ghcr.io/${{ github.repository }}/gh-actions-demo:${{ env.version }} .
+        docker build -t ghcr.io/${{ github.repository }}/gh-actions-demo:${{ env.TAG }} .
     - name: Docker Push
       run: |
-        docker push ghcr.io/${{ github.repository }}/gh-actions-demo:${{ env.version }}
+        docker push ghcr.io/${{ github.repository }}/gh-actions-demo:${{ env.TAG }}
     
   version-bump:
     runs-on: ubuntu-latest
