--- a/.github/workflows/demo-pipeline.yaml
+++ b/.github/workflows/demo-pipeline.yaml
@@ -41,26 +41,26 @@ jobs:
     - name: Export Version
       id: export-version
       run: |
-        version=$(cat version.txt)
-        echo "VERSION=$version" >> $GITHUB_OUTPUT
+        VERSION=$(cat version.txt)
+        echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
     - name: Tag Repo
       run: |
         git config --global user.name "github-actions"
         git config --global user.email "actions@github.com"
-        git tag -a 'v"$VERSION"' -m 'Version "$VERSION"'
-        git push origin 'v"$VERSION"'
+        git tag -a '''v'"$VERSION"'''' -m '''Version '"$VERSION"' Repo Tag'''
+        git push origin '''v'"$VERSION"''''
             
   docker-build-and-push:
     runs-on: ubuntu-latest
     needs: repo-tag
     env:
-      TAG: ${{ needs.repo-tag.outputs.VERSION }}
+      TAG: ${{ needs.repo-tag.outputs.version }}
 
     steps:
     - name: Repo Checkout
       uses: actions/checkout@v4
       with:
-        ref: 'v"$TAG"'
+        ref: "v${{ env.TAG }}"
     - name: Docker Buildx Setup
       uses: docker/setup-buildx-action@v3
     - name: GHCR Setup
