--- a/.github/workflows/demo-pipeline.yaml
+++ b/.github/workflows/demo-pipeline.yaml
@@ -98,6 +98,7 @@ jobs:
         NEW_VERSION="$MAJOR.$MINOR.$PATCH"
 
         echo $NEW_VERSION > version.txt
+        echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
     - name: Commit and Push
       run: |
         git config --global user.name "github-actions"
